--- a/game_app/package.json
+++ b/game_app/package.json
@@ -14,8 +14,10 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@types/ms": "^0.7.33",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
