--- a/game_app/package.json
+++ b/game_app/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "zustand": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
