--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "game_app",
+  "name": "game-hub",
+  "description": "Modern game discovery platform built with React, TypeScript, and Chakra UI",
+  "author": "GameHub Developer",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host",
     "build": "tsc && vite build",
+    "build:analyze": "npm run build && du -sh dist/assets/* | sort -hr",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "clean": "rm -rf dist node_modules/.vite"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -28,12 +35,14 @@
     "zustand": "^4.4.5"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.0.0",
